--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
----
-layout: default
-title: Test Title
----
-
-<div id="home">
-  <h1>Heading 1</h1>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Test title<title>
+</head>
+<body>
+  <h1>Hola amiguitos!</h1>
+  <footer>gpuma 2017</footer>
+</body>
+</html>
