--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
----
-layout: default
-title: Test Title
----
+<html>
+  <head>
+    <title>My Homepage</title>
+  </head>
 
-<div id="home">
-  <h1>Heading 1</h1>
-</div>
+
+  <body>
+    <h1>My homepage!</h1>
+    
+    <h2>
+        ;)
+    </h2>
+
+  </body>
+</html>
